<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@drawable/test"
    >



    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="念誦順序為:"
                android:id="@+id/textView24"
                android:textSize="13pt"
                android:textColor="#CD0000"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="1.念誦爐香讚、淨口業真言、淨意業真言、淨身業真言、安土地真言、普供養真言 。"
                android:id="@+id/textView832"
                android:textSize="12pt"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="2.挑選想要的咒語唸誦 。"
                android:id="@+id/textView831"
                android:textSize="12pt"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="3.唸誦補闕真言 。"
                android:id="@+id/textView834"
                android:textSize="12pt"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="4.唸誦迴向偈 。"
                android:id="@+id/textView835"
                android:textSize="12pt"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="------------------------------"
                android:id="@+id/textView92"
                android:textSize="13pt"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="咒語介紹:"
                android:textColor="#CD0000"
                android:id="@+id/textView82"
                android:textSize="13pt"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="1.爐香讚"
                android:textColor="#CD0000"
                android:id="@+id/textView84"
                android:textSize="13pt"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/str_introduction1"
                android:id="@+id/textView85"
                android:textSize="12pt"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="2.淨口業:"
                android:textColor="#CD0000"
                android:id="@+id/textView86"
                android:textSize="13pt"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/str_introduction2"
                android:id="@+id/textView87"
                android:textSize="12pt"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="3.淨意業:"
                android:textColor="#CD0000"
                android:id="@+id/textView88"
                android:textSize="13pt"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/str_introduction3"
                android:id="@+id/textView89"
                android:textSize="12pt"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="4.淨身業:"
                android:textColor="#CD0000"
                android:id="@+id/textView90"
                android:textSize="13pt"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/str_introduction4"
                android:id="@+id/textView91"
                android:textSize="12pt"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="5.安土地真言:"
                android:textColor="#CD0000"
                android:id="@+id/textView93"
                android:textSize="13pt"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/str_introduction5"
                android:id="@+id/textView94"
                android:textSize="12pt"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="6.普供養真言:"
                android:textColor="#CD0000"
                android:id="@+id/textView95"
                android:textSize="13pt"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/str_introduction6"
                android:id="@+id/textView96"
                android:textSize="12pt"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="7.如意寶輪王陀羅尼:"
                android:textColor="#CD0000"
                android:id="@+id/textView97"
                android:textSize="13pt"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/str_introduction7"
                android:id="@+id/textView98"
                android:textSize="12pt"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="8.消災吉祥神咒:"
                android:textColor="#CD0000"
                android:id="@+id/textView99"
                android:textSize="13pt"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/str_introduction8"
                android:id="@+id/textView100"
                android:textSize="12pt"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="9.功德寶山神咒:"
                android:textColor="#CD0000"
                android:id="@+id/textView101"
                android:textSize="13pt"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/str_introduction9"
                android:id="@+id/textView102"
                android:textSize="12pt"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="10.佛母準提神咒:"
                android:textColor="#CD0000"
                android:id="@+id/textView103"
                android:textSize="13pt"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/str_introduction10"
                android:id="@+id/textView104"
                android:textSize="12pt"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="11.聖無量壽決定光明王陀羅尼:"
                android:textColor="#CD0000"
                android:id="@+id/textView105"
                android:textSize="12.5pt"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/str_introduction11"
                android:id="@+id/textView106"
                android:textSize="12pt"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="12.藥師灌頂真言:"
                android:textColor="#CD0000"
                android:id="@+id/textView107"
                android:textSize="13pt"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/str_introduction12"
                android:id="@+id/textView108"
                android:textSize="12pt"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="13.觀音靈感真言:"
                android:textColor="#CD0000"
                android:id="@+id/textView109"
                android:textSize="13pt"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/str_introduction13"
                android:id="@+id/textView110"
                android:textSize="12pt"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="14.七佛滅罪真言:"
                android:textColor="#CD0000"
                android:id="@+id/textView111"
                android:textSize="13pt"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/str_introduction14"
                android:id="@+id/textView112"
                android:textSize="12pt"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="15.往生淨土神呪:"
                android:textColor="#CD0000"
                android:id="@+id/textView113"
                android:textSize="13pt"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/str_introduction15"
                android:id="@+id/textView114"
                android:textSize="12pt"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="16.善女天呪:"
                android:textColor="#CD0000"
                android:id="@+id/textView115"
                android:textSize="13pt"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/str_introduction16"
                android:id="@+id/textView116"
                android:textSize="12pt"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="17.補闕真言:"
                android:gravity="center_horizontal"
                android:textColor="#CD0000"
                android:id="@+id/textView119"
                android:textSize="13pt"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/str_introduction17"
                android:id="@+id/textView118"
                android:textSize="12pt"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>